Added testnet websocket client to BinanceApiClientFactory.java